--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,9 @@
 <body>
     <div class="container">
         <h1>Angular Demo App</h1>
-        <a href="#/" title="Home Page">Home</a>
+        <a href="#/" title="Home">Home</a>
+        <a href="#/create-contact" title="New Contact">New Contact</a>
+        <a href="#/about" title="About Page">About</a>
         <div ui-view></div>
     </div>
     <script src="scripts/vendor/requirejs/require.js" data-main="scripts/main"></script>
